<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sam.samproject.login.LoginActivity"
    >
    <data>
        <variable
            name="viewmodel"
            type="com.sam.samproject.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:id="@+id/txtInstruct"
            android:layout_width="@dimen/tile_width_height"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:padding="@dimen/margin_8dp"
            android:text="@string/txt_welcome"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/spContainer"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInstruct">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spRole"
                selectedValue="@={viewmodel.text}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/common_margin"
                android:background="@android:color/white"
                android:elevation="5dp"
                android:entries="@{viewmodel.roles}"
                android:minHeight="@dimen/spinner_height"
                android:minWidth="352dp"
                tools:listitem="@layout/spinner_item_view" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="100dp"
                android:layout_toRightOf="@+id/spRole"
                android:elevation="10dp"
                android:src="@drawable/ic_dropdown_arrow" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:minWidth="@dimen/min_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spContainer">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_user_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewmodel.strUserName}"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputUserName">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_user_password"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewmodel.strUserPassword}"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:onClick="@{viewmodel::onLogin}"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
    </android.support.constraint.ConstraintLayout>
</layout>
