...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_root"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/account_open"
        style="@style/dashboard_tile_style"
        android:layout_width="@dimen/tile_width_height"
        android:layout_height="@dimen/tile_width_height"
        android:layout_marginStart="@dimen/tile_margin"
        android:layout_marginEnd="@dimen/bm_margin_start_end"
        android:layout_marginTop="@dimen/tile_margin"
...
